updated with result for humaneval gpt3.5 rq2